# wol-gateway

./: .gitignore  CMakeLists.txt  README.md  config.c  config.h  config_example.ini  main.c  responses.c  responses.h  wol.c  wol.h
src/: responses.c  wol.c
